--- a/app/index.html
+++ b/app/index.html
@@ -11,16 +11,22 @@
 </head>
 
 <body>
-    <header>
-        <img src="assets/images/icons/clear-view-escapes.svg">
-        <a class="btn" href="#">Get in Touch</a>
-        <nav>
-            <ul>
-                <li><a href="#our-beginning">Our Beginning</a></li>
-                <li><a href="#features">Features</a></li>
-                <li><a href="#testimonials">Testimonials</a></li>
-            </ul>
-        </nav>
+    <header class="site-header">
+        <div class="wrapper">
+            <div class="site-header__logo">
+                <div class="icon icon--clear-view-escapes">Clear View Escapes  </div>
+            </div>
+            <div class="site-header__btn-container">
+                <a class="btn" href="#">Get in Touch</a>
+            </div>    
+            <nav class="primary-nav primary-nav--pull-right">
+                <ul>
+                    <li><a href="#our-beginning">Our Beginning</a></li>
+                    <li><a href="#features">Features</a></li>
+                    <li><a href="#testimonials">Testimonials</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
     <div class="large-hero">
