--- a/app/index.html
+++ b/app/index.html
@@ -151,6 +151,7 @@
             <p><span class="site-footer__text">Copyright &copy; 2016 Clear View Escapes. All rights reserved.</span> <a class="btn btn--orange" href="#">Get in Touch</a></p>
         </div>
     </footer>
+    <script src="assets/scripts/App.js"></script>
+    
 </body>
-
 </html>
